src/objects/mdm_Vendors__c.object
<CustomObject>
    <description>MDM - Used as a cache to run vendors dedupe checks toward MDM/SAP while improving performances compared with WS callouts. Originated by VPM project.</description>
    <fields>
        <fullName>VPM_FullDetails__c</fullName>
        <description>Provides a text summary of the important SAP matching fields for display within the Advanced form. Not interfaced with SAP</description>
        <formula>mdm_Name1__c &amp; &quot;, &quot; &amp;  mdm_Street__c &amp; &quot;, &quot; &amp; mdm_City__c &amp; &quot;, &quot; &amp; mdm_Postcode__c  &amp; &quot;, &quot; &amp; TEXT(mdm_Country__c)  &amp;&quot; | ECC: &quot;&amp; mdm_ecc__c &amp;&quot; | Vendor Code: &quot;&amp; 
IF(CONTAINS(mdm_ecc__c,&quot;Cordillera&quot;), mdm_vCodeCordillera__c,
IF(CONTAINS(mdm_ecc__c,&quot;Fusion&quot;), mdm_vCodeFusion__c,
IF(CONTAINS(mdm_ecc__c,&quot;Sirius&quot;), mdm_vCodeSirius__c,
IF(CONTAINS(mdm_ecc__c,&quot;U2K2&quot;), mdm_vCodeU2K2__c,
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_TaxDetails__c</fullName>
        <description>All text fields concatenated to help while searching</description>
        <formula>mdm_TaxNumber1__c  &amp; &quot; &quot;  &amp;  mdm_TaxNumber2__c  &amp; &quot; &quot;  &amp;  mdm_TaxNumber3__c  &amp; &quot; &quot;  &amp;  mdm_TaxNumber4__c  &amp;  &quot; &quot;  &amp;  mdm_VATRegNum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_City__c</fullName>
        <description>The city the vendor is based in</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_Code__c</fullName>
        <description>&quot;Vendor Code&quot;: The SAP code reference for the Vendor</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_Country__c</fullName>
        <description>The country the vendor is based in.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utd.Arab Emir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samoa, American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Dar-es-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mdm_ECC_1__c</fullName>
        <description>For storing which SAP ECC/s the vendor is a part of</description>
        <label>ECC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mdm_Name1__c</fullName>
        <description>The name of the Vendor</description>
        <inlineHelpText>VPM - The company name of the vendor</inlineHelpText>
        <label>Name 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_Name2__c</fullName>
        <label>Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_Name3__c</fullName>
        <label>Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_Postcode__c</fullName>
        <description>VPM - The postcode of the vendor</description>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_RemoteKey__c</fullName>
        <label>Remote Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_Street__c</fullName>
        <description>The first line of the vendors street address</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_TaxNumber1__c</fullName>
        <label>Tax Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_TaxNumber2__c</fullName>
        <label>Tax Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_TaxNumber3__c</fullName>
        <label>Tax Number 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_VATRegNum__c</fullName>
        <label>VAT Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_ecc__c</fullName>
        <formula>RIGHT(
IF(ISBLANK(mdm_vCodeCordillera__c),&quot;&quot;,&quot; ,Cordillera&quot;) + 

IF(ISBLANK(mdm_vCodeFusion__c),&quot;&quot;,&quot; ,Fusion&quot;) + 

IF(ISBLANK(mdm_vCodeSirius__c),&quot;&quot;,&quot; ,Sirius&quot;)+ 

IF(ISBLANK(mdm_vCodeU2K2__c),&quot;&quot;,&quot; ,U2K2&quot; )
, LEN(IF(ISBLANK(mdm_vCodeCordillera__c),&quot;&quot;,&quot; ,Cordillera&quot;) + 

IF(ISBLANK(mdm_vCodeFusion__c),&quot;&quot;,&quot; ,Fusion&quot;) + 

IF(ISBLANK(mdm_vCodeSirius__c),&quot;&quot;,&quot; ,Sirius&quot;)+ 

IF(ISBLANK(mdm_vCodeU2K2__c),&quot;&quot;,&quot; ,U2K2&quot; ))-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ECC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_vCodeCordillera__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Code (Cordillera)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_vCodeFusion__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Code (Fusion)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_vCodeSirius__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Code (Sirius)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_vCodeU2K2__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Code (U2K2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>mdm_Name1__c</columns>
        <columns>mdm_City__c</columns>
        <columns>mdm_Street__c</columns>
        <columns>mdm_Postcode__c</columns>
        <columns>mdm_Code__c</columns>
        <columns>mdm_ECC_1__c</columns>
        <columns>NAME</columns>
        <columns>mdm_ecc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VEN-{0000000}</displayFormat>
        <label>Vendor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>